test/classes/delete-free/tests-from-design-overview/generic-collection-owned-int-error.good
generic-collection-owned-int-error.chpl:13: In function 'test':
generic-collection-owned-int-error.chpl:14: error: unresolved type specifier 'Collection(type int(64))'
generic-collection-owned-int-error.chpl:5: note: candidates are: Collection(type element)
